<resources>
    <string name="app_name">v2Native</string>
    <string name="nav_header_title">V2Native</string>
    <string name="nav_header_subtitle">基于原生iptables以进行分流透明代理</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_test">Test</string>
    <string name="menu_logs">Logs</string>

    <string name="action_about">About</string>
    <string name="channel_name">Background</string>
    <string name="channel_description">Background Service Status</string>
    <string name="service_currently_not_running">当前服务未运行</string>
    <string name="service_currently_running">当前服务正在运行</string>
    <string name="log_info">日志信息</string>
    <string name="refresh">REFRESH</string>
    <string name="clear">Clear</string>
    <string name="v2native_switch">服务开关</string>
    <string name="info">INFO</string>
    <string name="configurationFile">导入配置</string>
    <string name="load">LOAD</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_disable_battery_optimization">KeepAlive</string>
    <string name="action_exit">Exit</string>
    <string name="failed">failed</string>
    <string name="terminal_command">终端命令</string>
    <string name="execute">Execute</string>
    <string name="enter_your_commands_here">Enter your commands here..</string>
    <string name="currentConfiguration">当前配置</string>
    <string name="check">CHECK</string>
    <string name="test">测试</string>
    <string name="network_connection">网络连接</string>
    <string name="outgoing_ip">出口IP</string>
    <string name="_127_0_0_1">127.0.0.1</string>
    <string name="google_204_tls">Google_204 延迟 (TLS)</string>
    <string name="_0ms">0ms</string>
    <string name="n_a">N/A</string>
    <string name="quick_import">Quick import</string>
    <string name="status_icon">Status ICON</string>
    <string name="from_clipboard">从剪贴板添加</string>
    <string name="import_config">导入配置</string>
    <string name="config_not_currently_imported">当前配置未导入</string>
    <string name="config_currently_imported">当前配置已导入</string>
</resources>