<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_md_add"
        android:title="@string/quick_import"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_quick"
                android:title="@string/from_clipboard" />
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_md_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_disable_battery_optimization"
        android:title="@string/action_disable_battery_optimization"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>