<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.starx_software_lab.v2native.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_test"
        android:name="org.starx_software_lab.v2native.ui.test.TestFragment"
        android:label="@string/menu_test"
        tools:layout="@layout/fragment_test" />

    <fragment
        android:id="@+id/nav_logs"
        android:name="org.starx_software_lab.v2native.ui.log.LogFragment"
        android:label="@string/menu_logs"
        tools:layout="@layout/fragment_slideshow" />
</navigation>