<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/orange"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/flag"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/ic_md_warning"
                        android:contentDescription="@string/status_icon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:gravity="center|start"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/v2native_switch"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stop"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/currentConfiguration"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/configurationFile"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/load"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/load" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/info"
        app:srcCompat="@android:drawable/ic_dialog_info" />
</LinearLayout>